# batchgcd

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  batchgcd.cpp  download_patch_gmp.sh  example_compromised.txt  makefile  patch_gmp.sh  toy-base10.moduli  toy.moduli  utils.cpp  utils.hpp
gmp/: gmp-6.1.2.patch
scripts/: patch_gmp.sh  test_run.sh
src/: batchgcd.cpp  batchgcd.hpp  utils.cpp  utils.hpp
src/test/: gmp_import_overflow.cpp  testpatch.cpp
testdata/: example_compromised.txt  example_compromised_base16.txt  toy-base10.moduli  toy.moduli
